hphp/hack/test/typecheck/nameof/unstable_feature.php.exp
File "unstable_feature.php", line 9, characters 19-26:
Cannot use unstable feature: `nameof_class` (Parsing[1002])
File "unstable_feature.php", line 10, characters 22-34:
Cannot use unstable feature: `nameof_class` (Parsing[1002])
File "unstable_feature.php", line 11, characters 5-13:
Cannot use unstable feature: `nameof_class` (Parsing[1002])
File "unstable_feature.php", line 11, characters 12-13:
`nameof` can only be used with a class (Parsing[1002])
